[package]
name = "luza"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
env_logger = "0.11.6"
jsonl = "4.0.1"
log = "0.4.25"
rand = "0.9.0"
ratatui = "0.29.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
